tests/baselines/reference/crashInYieldStarInAsyncFunction.errors.txt
crashInYieldStarInAsyncFunction.ts(13,12): error TS1320: Type of 'await' operand must either be a valid promise or must not contain a callable 'then' member.


==== crashInYieldStarInAsyncFunction.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/53145
    var obj = {
        [Symbol.asyncIterator]() {
            return {
                next() {
                    return { then() { } };
                }
            };
        }
    };
    
    async function* g() {
        yield* obj;
               ~~~
!!! error TS1320: Type of 'await' operand must either be a valid promise or must not contain a callable 'then' member.
    }